[project]
name = "runsmith"
version = "0.1.0"
description = "Runsmith - A supervisor-tree framework for building resilient systems"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "typing-extensions>=4.11.0; python_version < '3.13'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.39.0",
    "pre-commit>=4.5.1",
    "pre-commit-hooks>=6.0.0",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
    "ignore::FutureWarning",
]
addopts = "-v --cov=runsmith --cov-report=term"
