[project]
name = "runsmith"
version = "1.0.0"
description = "Runsmith - A supervisor-tree framework for building resilient systems"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Di Lu", email = "dilu3100@gmail.com" }]
dependencies = [
    "loguru>=0.7.3",
    "typing-extensions>=4.11.0; python_version < '3.13'",
]

[project.scripts]
docs-build = "runsmith.scripts:build_docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.39.0",
    "pre-commit>=4.5.1",
    "pre-commit-hooks>=6.0.0",
    "pyright>=1.1.408",
    "ruff>=0.15.9",
]

test = ["pytest>=9.0.3", "pytest-asyncio>=1.3.0", "pytest-cov>=7.1.0"]

docs = [
    "myst-parser>=4.0.1",
    "sphinx>=7.4.7,<8.2.3",
    "sphinx-book-theme>=1.1.4",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-mermaid>=2.0.1",
]
examples = ["fastapi[standard]>=0.136.0"]


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
    "ignore::FutureWarning",
]
addopts = "-v --cov=runsmith --cov-report=term"
